(lang dune 3.19)

(name rogue)

(generate_opam_files true)

(source
 (github username/reponame))

(authors "Adam Carrez adam.carrez@ens-rennes.fr, Eliott Houget eliott.houget@ens-rennes.fr, Etienne Lasherme etienne.lasherme@ens-rennes.fr")

(maintainers "Maintainer Name <maintainer@example.com>")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name rogue)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends ocaml)
 (tags
  ("add topics" "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
