(lang dune 3.19)

(name rogue)

(generate_opam_files true)

(source
 (github rustyroot/rogue))

(authors "Adam Carrez adam.carrez@ens-rennes.fr, Eliott Houget eliott.houget@ens-rennes.fr, Etienne Lasherme etienne.lasherme@ens-rennes.fr")

(maintainers "Adam Carrez adam.carrez@ens-rennes.fr, Eliott Houget eliott.houget@ens-rennes.fr, Etienne Lasherme etienne.lasherme@ens-rennes.fr")

(license LICENSE)

(documentation https://github.com/rustyroot/rogue/blob/main/README.md)

(package
 (name rogue)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends ocaml)
 (tags
  ("add topics" "to describe" your project)))
